[gd_scene load_steps=7 format=3 uid="uid://2s78e1lw1xsc"]

[ext_resource type="Script" path="res://scripts/asteroid.gd" id="1_jw8tp"]
[ext_resource type="Texture2D" uid="uid://dwi75d3hgk13s" path="res://sprites/rock.-sheet.png" id="2_864wi"]
[ext_resource type="AudioStream" uid="uid://c5ngp4b1j6fld" path="res://audio/hit/Hit 1.mp3" id="3_hwbbv"]

[sub_resource type="Animation" id="Animation_xswvr"]
resource_name = "destroy"
length = 0.41
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8jxid"]
_data = {
"destroy": SubResource("Animation_xswvr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mxp7u"]
size = Vector2(15, 16)

[node name="asteroid" type="Area2D"]
script = ExtResource("1_jw8tp")

[node name="sprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_864wi")
hframes = 5

[node name="animator" type="AnimationPlayer" parent="sprite"]
libraries = {
"": SubResource("AnimationLibrary_8jxid")
}

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_mxp7u")

[node name="notifier" type="VisibleOnScreenNotifier2D" parent="."]

[node name="player" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hwbbv")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="notifier" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="finished" from="player" to="." method="_on_player_finished"]
